# fastmatmult

./: .gitignore  Cargo.toml  README.md  notes.txt
3rd-party-lib/: Makefile  armadillo.cpp
measured/buldozer-4.2GHz-8/: 1024.out  16384.out  2048.out  256.out  4096.out  512.out  8192.out  armadillo.out
measured/celeron-1.8GHz-4/: 1024.out  2048.out  256.out  4096.out  512.out  8192.out  armadillo.out
measured/xeon-1.8GHz-20_2/: 1024.out  16384.out  2048.out  256.out  4096.out  512.out  8192.out  armadillo.out
measured/xeon-3.5GHz-4_2/: 1024.out  2048.out  256.out  4096.out  512.out  8192.out  armadillo.out
presentation/: Makefile  cache-matrix.bob  hier.bob  mult.bob  numa.bob  presentation.html  presentation.md  recursion.bob  simd.bob  z-order-2.bob  z-order.bob
presentation/template/: index.html  style.scss
scripts/: crunch.pl  measure.sh  plot.pl
src/: lib.rs  simd.rs  simple.rs  znot.rs
