[package]
name = "fastmatmult"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
license = "Apache-2.0/MIT"
publish = false

[dependencies]
bincode = "~1"
failure = "~0.1"
itertools = "~0.6"
rand = "~0.4"
rayon = "~1"
serde = "~1"
serde_derive = "~1"
structopt = "~0.2"
typenum = "~1"
